--- a/Covid_Respiratory care/app/build.gradle
+++ b/Covid_Respiratory care/app/build.gradle
@@ -67,4 +67,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.2.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
+    //그래프
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+
 }
