--- a/Covid_Respiratory care/build.gradle
+++ b/Covid_Respiratory care/build.gradle
@@ -3,14 +3,15 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://naver.jfrog.io/artifactory/maven/'}
         maven { url 'https://jitpack.io' }
+        maven { url 'https://naver.jfrog.io/artifactory/maven/'}
 
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
