--- a/Covid_Respiratory care/app/build.gradle
+++ b/Covid_Respiratory care/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
     id 'com.google.gms.google-services'
 }
 //apply plugin: 'com.android.application'
@@ -51,8 +52,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.android.gms:play-services-location:19.0.1'
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-analytics:20.1.2'
+    implementation 'com.google.firebase:firebase-database:20.0.4'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -61,7 +62,7 @@ dependencies {
     implementation 'com.naver.maps:map-sdk:3.14.0'
 
     implementation 'gun0912.ted:tedpermission:2.2.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
 
     //firebase
     implementation platform('com.google.firebase:firebase-bom:29.2.1')
@@ -70,5 +71,22 @@ dependencies {
     //그래프
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'//스칼라 컨버터
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.9'
+
+    //coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    //RoomDB
+    implementation "androidx.room:room-runtime:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
 }
