--- a/Covid_Respiratory care/app/src/main/AndroidManifest.xml
+++ b/Covid_Respiratory care/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.covidproject.covid_respiratorycare"
     >
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -23,6 +24,11 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Covid_Respiratorycare.NoActionBar">
+
+        </activity>
+
+        <activity android:name=".ui.splash.SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
