--- a/Covid_Respiratory care/app/src/main/AndroidManifest.xml
+++ b/Covid_Respiratory care/app/src/main/AndroidManifest.xml
@@ -9,13 +9,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_masklauncher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_masklauncher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Covid_Respiratorycare">
+<!--asdasd
 
+-->
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="gi0qse5ddg" />
@@ -39,7 +41,6 @@
             android:theme="@style/Theme.Covid_Respiratorycare.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
