--- a/Covid_Respiratory care/app/build.gradle
+++ b/Covid_Respiratory care/app/build.gradle
@@ -55,9 +55,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.android.gms:play-services-location:19.0.1'
-    implementation 'com.google.firebase:firebase-analytics:20.1.2'
-    implementation 'com.google.firebase:firebase-database:20.0.4'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.0'
+//    implementation 'com.google.firebase:firebase-analytics:20.1.2'
+//    implementation 'com.google.firebase:firebase-database:20.0.4'
+//    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -81,11 +81,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'//스칼라 컨버터
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 
+    // rxjava3
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation "io.reactivex.rxjava3:rxjava:3.1.4"
+
     //gson
     implementation 'com.google.code.gson:gson:2.8.9'
 
     //coroutine
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1")
 
     //RoomDB
