--- a/Covid_Respiratory care/app/src/main/AndroidManifest.xml
+++ b/Covid_Respiratory care/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".CovidRespiratorycareApp"
         android:icon="@mipmap/ic_masklauncher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_masklauncher_round"
@@ -39,6 +40,7 @@
             android:theme="@style/Theme.Covid_Respiratorycare.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+<!--                <action android:name="android.intent.action.DIAL"/>-->
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
